[gd_scene load_steps=5 format=3 uid="uid://xcwfwnyxag3g"]

[ext_resource type="Script" uid="uid://off4ovb6rulv" path="res://entities/npc/caterpillar/smoke_wave.gd" id="1_vjdmr"]
[ext_resource type="Texture2D" uid="uid://ukbhami0b7fo" path="res://assets/smoke_cloud.png" id="2_priwo"]
[ext_resource type="Script" uid="uid://b4sw1u6yl27fx" path="res://entities/rewinder.gd" id="3_ll2go"]

[sub_resource type="CircleShape2D" id="CircleShape2D_priwo"]
radius = 128.016

[node name="SmokeWave" type="Area2D"]
script = ExtResource("1_vjdmr")

[node name="Rewinder" type="Node2D" parent="."]
script = ExtResource("3_ll2go")
metadata/_custom_type_script = "uid://b4sw1u6yl27fx"

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1
texture = ExtResource("2_priwo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-7, 21)
shape = SubResource("CircleShape2D_priwo")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
